Update thesis: update images size and descriptions

--- a/doc/relazione.tex
+++ b/doc/relazione.tex
@@ -271,7 +271,7 @@ voxel (equivalente di \(M\)) mentre \(\rho\) rappresenta la densità del voxel (
 
 \begin{figure}[H]
   \centering
-  \resizebox{\textwidth}{!}{
+  \resizebox{0.8\textwidth}{!}{
     \begin{tikzpicture}
     % Left panel
     \begin{scope}
@@ -592,8 +592,7 @@ ottiene:
     \end{tikzpicture}
   }
   \caption{\label{fig:CT_polar_coordinates} Vista goniometrica di un raggio diretto dalla prima sorgente verso il centro del pixel
-           centrale nella matrice che rappresenta il rilevatore.
-           Il ragionamento può essere generalizzato anche per gli altri pixel.}
+           centrale nella matrice che rappresenta il rilevatore.}
 \end{figure}
 
 Osservando \autoref{fig:CT_polar_coordinates}, dalle formule trigonometriche per i triangoli rettangoli:
@@ -636,7 +635,7 @@ Può essere rappresentato mediante l'equazione parametrica di una retta passante
 \setcounter{figcounter}{0}
 \begin{figure}[H]
   \centering
-  \resizebox{\textwidth}{!}{
+  \resizebox{0.8\textwidth}{!}{
     \begin{tikzpicture}
     % Left-up panel
     \begin{scope}[shift={(0,9)}]
