--- a/doc/riferimenti.bib
+++ b/doc/riferimenti.bib
@@ -6,6 +6,43 @@
   year        = {2024/2025},
 }
 
+@Inbook{MoroLoli2021,
+  author = "Morotti, Elena and Piccolomini, Elena Loli",
+  editor = "Chen, Ke and Sch{\"o}nlieb, Carola-Bibiane and Tai, Xue-Cheng and Younces, Laurent",
+  title = "Sparse Regularized CT Reconstruction: An Optimization Perspective",
+  bookTitle = "Handbook of Mathematical Models and Algorithms in Computer Vision and Imaging: Mathematical Imaging and Vision",
+  year = "2021",
+  publisher = "Springer International Publishing",
+  address = "Cham",
+  pages = "1--34",
+  abstract = "In Computed Tomography (CT), decreasing the X-rays dose is essential to reduce the negative effects of radiation
+  exposure on the human health. One possible way to accomplish it is to reduce the number of projections acquired, hence the name
+  of sparse CT. Traditional methods for image reconstruction cannot recover reliable images in this case: the lack of information
+  due to the missed projections produces strong artifacts. Alternatively, optimization frameworks are flexible models where
+  incorporated regularization functions impose regularity constraints on the solution, thus avoiding unwanted artifacts and
+  contrasting noise propagation. Since the iterative methods solving the optimization problem calculate more accurate solutions as
+  iterations (and computational time) increase, it is possible to choose a better reconstructed image at the expense of execution
+  time, or viceversa. Parallel implementations of the iterative solvers significantly reduce the computational time, allowing for
+  a large number of iterations in a prefixed short time.",
+  isbn = "978-3-030-03009-4",
+  doi = "10.1007/978-3-030-03009-4_123-1",
+  url = "https://doi.org/10.1007/978-3-030-03009-4_123-1"
+}
+
+@ARTICLE{NVIDIA2008,
+  author   = {Lindholm, Erik and Nickolls, John and Oberman, Stuart and Montrym, John},
+  journal  = {IEEE Micro}, 
+  title    = {NVIDIA Tesla: A Unified Graphics and Computing Architecture}, 
+  year     = {2008},
+  volume   = {28},
+  number   = {2},
+  pages    = {39-55},
+  keywords = {Graphics;Computer architecture;Parallel processing;Pipelines;Concurrent computing;Load management;Multicore
+  processing;Parallel programming;Portable computers;Workstations;Hot Chips 19;GPU;parallel processor;SIMT;SIMD;unified graphics
+  and parallel computing architecture;graphics processing unit;cooperative thread array;Tesla},
+  doi      = {10.1109/MM.2008.31}
+}
+
 @Article{Siddon1984,
   author = {Siddon, Robert L.},
   title = {Fast calculation of the exact radiological path for a three-dimensional CT array},
@@ -35,25 +72,15 @@
   year = {1985}
 }
 
-@Inbook{MoroLoli2021,
-  author = "Morotti, Elena and Piccolomini, Elena Loli",
-  editor = "Chen, Ke and Sch{\"o}nlieb, Carola-Bibiane and Tai, Xue-Cheng and Younces, Laurent",
-  title = "Sparse Regularized CT Reconstruction: An Optimization Perspective",
-  bookTitle = "Handbook of Mathematical Models and Algorithms in Computer Vision and Imaging: Mathematical Imaging and Vision",
-  year = "2021",
-  publisher = "Springer International Publishing",
-  address = "Cham",
-  pages = "1--34",
-  abstract = "In Computed Tomography (CT), decreasing the X-rays dose is essential to reduce the negative effects of radiation
-  exposure on the human health. One possible way to accomplish it is to reduce the number of projections acquired, hence the name
-  of sparse CT. Traditional methods for image reconstruction cannot recover reliable images in this case: the lack of information
-  due to the missed projections produces strong artifacts. Alternatively, optimization frameworks are flexible models where
-  incorporated regularization functions impose regularity constraints on the solution, thus avoiding unwanted artifacts and
-  contrasting noise propagation. Since the iterative methods solving the optimization problem calculate more accurate solutions as
-  iterations (and computational time) increase, it is possible to choose a better reconstructed image at the expense of execution
-  time, or viceversa. Parallel implementations of the iterative solvers significantly reduce the computational time, allowing for
-  a large number of iterations in a prefixed short time.",
-  isbn = "978-3-030-03009-4",
-  doi = "10.1007/978-3-030-03009-4_123-1",
-  url = "https://doi.org/10.1007/978-3-030-03009-4_123-1"
+@Article{Flynn1966,
+  author   = {Flynn, M.J.},
+  journal  = {Proceedings of the IEEE},
+  title    = {Very high-speed computing systems},
+  year     = {1966},
+  volume   = {54},
+  number   = {12},
+  pages    = {1901-1909},
+  keywords = {Computer aided instruction;Large-scale systems;Impedance matching;Art;Scientific computing;Arithmetic;Pervasive
+  computing;Hardware;Turing machines},
+  doi      = {10.1109/PROC.1966.5273}
 }
